# ComplianceQA

./: .gitignore  complianceqa.db  main.py  project_guide.md  pyproject.toml
alembic/: env.py
alembic/versions/: b8659cc98002_initial.py
src/: config.py
src/db/: __init__.py  connection.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/models/: __init__.py  compliance.py
src/schemas/: __init__.py  compliance.py
src/scripts/: index_documents.py
src/services/: __init__.py  qdrant_service.py  video_indexer.py
src/utils/: __init__.py  embedding_model.py  llm.py  qdrant.py  whisper_model.py
