[project]
name = "complianceqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "langchain>=1.2.15",
    "langgraph>=1.1.8",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.2",
    "yt-dlp>=2026.3.17",
]
