[project]
name = "complianceqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.1.8",
    "opencv-python>=4.10.0",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "yt-dlp>=2026.3.17",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
]
